@@ -1,4 +1,7 @@
 Changes in quota-tools from 3.08 to 3.09
+* quotacheck(8) now remembers only hardlinked files and not all inodes with
+  n_link > 1 (Jan Kara, Jan Kasprzak)
+* quotacheck(8) doesn't store structures for all users in old quota format  (Jan Kasprzak)
 * fixed minor bug in documentation (Jan Kara, Lucas Brasilino)
 * repquota(8) handles multiple entries in /etc/passwd better (Jan Kara)
 * made tools not to touch mountpoints mounted without quota options (Jan Kara)
